#+TITLE: mini-httpd                            -*- mode:org;fill-column:79; -*-
#+STARTUP: showall

* Noteworthy changes in release ?.? (????-??-??) [?]

* Noteworthy changes in release 1.3 (2013-03-20) [stable]

  Fix build on BSD Unix.

* Noteworthy changes in release 1.2 (2013-02-09) [stable]

  Minor portability fixes for recent versions of GCC and gnulib.

* Noteworthy changes in release 1.1 (2010-03-05) [stable]

  The project has moved to Savannah at <http:/www.nongnu.org/mini-httpd/>.

* Noteworthy changes in release 1.0 (2004-01-20) [stable]

  Initial version.