@@ -3,6 +3,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  Work around broken 'timezone' variable in FreeBSD. POSIX says that this
+  variable ought to be a long integer that signifies the time difference to
+  GMT, but FreeBSD doesn't provide that information.
+
 * Noteworthy changes in release 1.3 (2013-03-20) [stable]
 
   Fix build on BSD Unix.
